--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
-    "expo": "~39.0.2",
-    "expo-linear-gradient": "~8.3.0",
-    "expo-status-bar": "~1.0.2",
+    "expo": "^40.0.1",
+    "expo-auth-session": "~3.0.0",
+    "expo-linear-gradient": "~8.4.0",
+    "expo-random": "~10.0.0",
+    "expo-status-bar": "~1.0.3",
+    "expo-web-browser": "~8.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-appearance": "~0.3.3",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-dotenv": "^2.5.3",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
@@ -30,7 +34,7 @@
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "react-native-web": "~0.13.7",
-    "typescript": "~3.9.5"
+    "typescript": "~4.0.0"
   },
   "private": true
 }
