--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-auth-session": "~3.0.0",
     "expo-linear-gradient": "~8.4.0",
     "expo-random": "~10.0.0",
+    "expo-secure-store": "~9.3.0",
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
     "moment": "^2.29.1",
