--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.9.3",
     "expo": "^40.0.1",
     "expo-auth-session": "~3.0.0",
+    "expo-blur": "~8.2.2",
     "expo-linear-gradient": "~8.4.0",
     "expo-random": "~10.0.0",
     "expo-secure-store": "~9.3.0",
