--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-toast-message": "^1.4.9",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
