--- a/package.json
+++ b/package.json
@@ -5,7 +5,23 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/jest.setup.js"
+    ],
+    "prettierPath": "prettier"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.2",
@@ -35,9 +51,11 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.2.0",
@@ -45,7 +63,10 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
+    "jest-expo": "^41.0.0",
+    "prettier": "2.3.0",
     "react-native-web": "~0.13.7",
+    "react-test-renderer": "^16.11.0",
     "typescript": "~4.0.0"
   },
   "private": true
