--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,5 +25,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm test
+    - run: yarn ci
+    - run: yarn test
