--- a/package.json
+++ b/package.json
@@ -25,29 +25,29 @@
     "prettierPath": "prettier"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.2",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^5.9.3",
-    "expo": "^40.0.1",
-    "expo-auth-session": "~3.0.0",
-    "expo-blur": "~8.2.2",
-    "expo-linear-gradient": "~8.4.0",
-    "expo-random": "~10.0.0",
-    "expo-secure-store": "~9.3.0",
-    "expo-status-bar": "~1.0.3",
-    "expo-web-browser": "~8.6.0",
+    "expo": "^42.0.0",
+    "expo-auth-session": "~3.3.1",
+    "expo-blur": "~9.0.3",
+    "expo-linear-gradient": "~9.2.0",
+    "expo-random": "~11.2.0",
+    "expo-secure-store": "~10.2.0",
+    "expo-status-bar": "~1.0.4",
+    "expo-web-browser": "~9.2.0",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-appearance": "~0.3.3",
     "react-native-dotenv": "^2.5.3",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-toast-message": "^1.4.9",
     "react-native-web": "~0.13.12"
   },
@@ -64,7 +64,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
-    "jest-expo": "^41.0.0",
+    "jest-expo": "^42.0.0",
     "prettier": "2.3.0",
     "react-native-web": "~0.13.7",
     "react-test-renderer": "^16.11.0",
