--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^5.9.3",
+    "@reduxjs/toolkit": "^1.6.1",
     "expo": "^42.0.0",
     "expo-auth-session": "~3.3.1",
     "expo-blur": "~9.0.3",
@@ -49,7 +50,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-toast-message": "^1.4.9",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
