--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
     "moment": "^2.29.1",
+    "moti": "^0.16.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
