--- a/package.json
+++ b/package.json
@@ -25,40 +25,39 @@
     "prettierPath": "prettier"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^5.9.3",
-    "@reduxjs/toolkit": "^1.6.1",
-    "expo": "^42.0.0",
-    "expo-auth-session": "~3.3.1",
-    "expo-blur": "~9.0.3",
-    "expo-linear-gradient": "~9.2.0",
-    "expo-random": "~11.2.0",
-    "expo-secure-store": "~10.2.0",
-    "expo-status-bar": "~1.0.4",
-    "expo-web-browser": "~9.2.0",
-    "moment": "^2.29.1",
-    "moti": "^0.16.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-appearance": "~0.3.3",
+    "@reduxjs/toolkit": "^1.9.1",
+    "expo": "^47.0.0",
+    "expo-auth-session": "~3.8.0",
+    "expo-blur": "~12.0.1",
+    "expo-linear-gradient": "~12.0.1",
+    "expo-random": "~13.0.0",
+    "expo-secure-store": "~12.0.0",
+    "expo-status-bar": "~1.4.2",
+    "expo-web-browser": "~12.0.0",
+    "moment": "^2.29.4",
+    "moti": "^0.21.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-dotenv": "^2.5.3",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-toast-message": "^1.4.9",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "~0.18.7",
     "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
+    "@types/react": "~18.0.24",
+    "@types/react-dom": "~18.0.8",
+    "@types/react-native": "~0.70.6",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -67,11 +66,11 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
-    "jest-expo": "^42.0.0",
+    "jest-expo": "^47.0.0",
     "prettier": "2.3.0",
     "react-native-web": "~0.13.7",
-    "react-test-renderer": "^16.11.0",
-    "typescript": "~4.0.0"
+    "react-test-renderer": "^18.2.0",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
